# foxypack

./: .gitignore  LICENSE  README.md  asdf.py  mkdocs.yml  pyproject.toml
foxypack/: __init__.py  answers.py  controller.py  exceptions.py  вфе ыпвы.py
foxypack/abc/: foxysearch.py  foxystat.py
foxypack/entitys/: balancers.py  casting.py  entity_descriptors.py  entitys.py  exceptions.py  pool.py  serializer.py  settings.py  storage.py  types.py  validators.py
foxypack/foxypack_abc/: answers.py  foxyanalysis.py  foxysearch.py  foxystat.py  foxystatistics.py
tests/: test_controller.py  test_exceptions.py
tests/foxypack_abc/: test_foxyanalysis.py  test_foxystat.py  test_foxystatistics.py
