[project]
name = "foxypack"
version = "0.1.0"
description = "foxy interface library, entity balancing core, and shared parser"
authors = [
    {name = "shapdi", email = "shapranov.work@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
repository = "https://github.com/ShapDi/foxypack"

[project.optional-dependencies]
test = [
    "coverage>=7.10.7",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
    "pytest-asyncio>=1.3.0",
]
dev = [
    "mkdocs-material>=9.7.0",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

